--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@
 .co-hero {
   width: 100%;
   height: 100vh;
-  background-image: url("/assets/uploads/hero-image.webp");
+  background-image: url("../uploads/hero-image.webp");
   background-size: cover;
 }
 
