--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,14 @@
   gap: 1rem;
 }
 
+.nav-links a {
+  font-size: 12px;
+}
+
+.hi-link {
+  font-size: 12px;
+}
+
 .name-site {
   background-color: var(--contrast-color);
   color: #efefef;
@@ -71,6 +79,10 @@
   height: 370px;
   display: flex;
   align-items: end;
+}
+
+.info-product {
+  font-size: 12px;
 }
 
 @media (max-width: 990px) {
